# swagger.json
@@ -1037,6 +1037,30 @@
             "$ref": "#/components/responses/UnprocessableContent"
           }
         }
+      },
+      "delete": {
+        "tags": ["GoalTypes"],
+        "summary": "Delete or archive goal type",
+        "responses": {
+          "204": {
+            "description": "Deleted"
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "403": {
+            "$ref": "#/components/responses/Forbidden"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "417": {
+            "$ref": "#/components/responses/ExpectationFailed"
+          }
+        }
       }
     },
     "/goal-types/{id}/fields": {
@@ -1053,7 +1077,10 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/GoalTypeFieldForm"
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/GoalTypeFieldForm"
+                }
               }
             }
           }
@@ -1988,7 +2015,7 @@
           "goal_type_fields": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/GoalTypeFieldForm"
+              "$ref": "#/components/schemas/GoalTypeFieldResponse"
             }
           }
         }
